all changes added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/Compact.Services/Compact.Services.Api/Properties/ServiceDependencies/CompactServicesApi - Web Deploy
+/Compact.Services/Compact.Services.Api/Properties
